--- a/src/app/buscador/buscador.page.html
+++ b/src/app/buscador/buscador.page.html
@@ -1,28 +1,30 @@
-<ion-header>
+<ion-header class="myheader">
   <ion-toolbar no-border>
-      <ion-grid>
+      <div class="inlinediv">
+      <!-- <ion-grid>
           <ion-row>
               <ion-col class="centraliza">
-                  <div class="row">
-                      <div>
+                  <div class="row"> -->
+                      <!-- <div> -->
                           <button class="botaoLimpar" ion-button icon-only round (click)="limpar()">
-                              <ion-icon name="close"></ion-icon>
+                              <ion-icon size="large" name="close"></ion-icon>
                           </button>
-                      </div>
-                      <div>
-                          <form (ngSubmit)="buscaApi()">
+                      <!-- </div>
+                      <div> -->
+                          &nbsp;<form (ngSubmit)="buscaApi()">
                               <ion-input class="inputbuscar" placeholder="busque o produto aqui" name="devobuscar" [(ngModel)]="buscar"></ion-input>
                           </form>
-                      </div>
-                      <div>
-                          <button round icon-only ion-button icon-right (click)="buscaApi()">
-                              <ion-icon name="search"></ion-icon>
+                      <!-- </div>
+                      <div> -->
+                        &nbsp;<button class="botaoBuscar" round (click)="buscaApi()">
+                              <ion-icon size="large" name="search"></ion-icon>
                           </button>
-                      </div>
-                  </div>
+                      <!-- </div> -->
+                  <!-- </div>
               </ion-col>
           </ion-row>
-      </ion-grid>
+      </ion-grid> -->
+    </div>
   </ion-toolbar>
 </ion-header>
 
