--- a/src/app/buscador/buscador.page.scss
+++ b/src/app/buscador/buscador.page.scss
@@ -1,61 +1,81 @@
-a {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-    &.more-options,
-    &.header-anchor {
-        text-decoration: none;
-    }
+// a {
+//     color: #000;
+//     text-decoration: none;
+//     cursor: pointer;
+//     &.more-options,
+//     &.header-anchor {
+//         text-decoration: none;
+//     }
+// }
+
+.inlinediv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+ion-header {
+    width: 100%;
+    --background: rgba(129, 14, 14, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-// ion-header {
-    ion-grid {
-        padding: 0;
-    }
-    ion-row {
-        padding: 0;
-    }
-    ion-col {
-        text-align: center;
-        padding: 0;
-    }
-    .botaoBuscar {
-        color: white;
-        background: rgba(0, 0, 0, 0.3);
-    }
-    .botaoLimpar {
-        color: white;
-        background: rgba(0, 0, 0, 0.5);
-    }
-    .inputbuscar {
-        border-radius: 15px;
-        color: white;
-        background: rgba(0, 0, 0, 0.5);
-        width: 250px;
-    }
-    .logo {
-        max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-    .cabecalho {
-        color: white;
-        text-align: center;
-    }
-    .centraliza {
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+ion-toolbar {
+    --background: rgba(0,0,0,0.8);
+    display: inline;
+    align-items: center;
+    justify-content: center;
+}
+
+
+//     ion-grid {
+//         padding: 0;
+//     }
+//     ion-row {
+//         padding: 0;
+//     }
+//     ion-col {
+//         text-align: center;
+//         padding: 0;
+//     }
+.botaoBuscar {
+    color: white;
+    background: rgba(112, 20, 20, 1);
+    // padding-left: 10px;
+    border-radius: 15px;
+}
+.botaoLimpar {
+    color: white;
+    background: rgb(39, 132, 175);
+    border-radius: 15px;
+}
+.inputbuscar {
+    border-radius: 15px;
+    color: white;
+    background: rgb(49, 90, 16);
+    width: 250px;
+}
+// .logo {
+//     max-width: 600px;
+//     margin-left: auto;
+//     margin-right: auto;
+//     display: block;
+// }
+// .cabecalho {
+//     color: white;
+//     text-align: center;
+// }
+// .centraliza {
+//     color: white;
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+// }
 // }
 
 ion-content {
-    --background: url("../../assets/background6.jpg");
-    --background-size: cover;
-    --background-repeat: no-repeat;
-    --background-position: center center;
+    --background: url(../../assets/background6.jpg) no-repeat center/cover fixed;
     img {
         margin-bottom: 2em;
     }        
@@ -105,10 +125,10 @@ ion-content {
     text-align: center;
 }
 
-.toolbar-background {
-    background-color: rgba(255, 255, 255, 0.1);
-    // background-color: rgba(0, 0, 0, 0.2);
-}
+
+// ion-tab-bar {
+//     --background: rgba(0,0,0,0.5);
+// }
 
 // ion-footer {
 //     ion-grid {
@@ -123,7 +143,7 @@ ion-content {
 //     }
 // }
 
-.tabs {
-    background-color: rgba(100, 15, 255, 1);
-    --background: url("../../assets/background6.jpg");
-}
+// .tabs {
+//     background-color: rgba(100, 15, 255, 1);
+//     --background: url("../../assets/background6.jpg");
+// }
